corrected wrap width for template views

--- a/app/app/styles/view/document/wizard.scss
+++ b/app/app/styles/view/document/wizard.scss
@@ -82,6 +82,7 @@
 				> .details {
 					vertical-align: top;
 					display: inline-block;
+					width: 80%;			
 
 					> .title {
 						font-size: 1rem;
