--- a/app/app/styles/view/page-documents.scss
+++ b/app/app/styles/view/page-documents.scss
@@ -257,7 +257,7 @@
 				> .details {
 					vertical-align: top;
 					display: inline-block;
-					width: 85%;
+					width: 80%;
 					cursor: pointer;
 
 					> .title {
